src/components/Header/Header.module.scss
.container {
  position: fixed;
  top: 0;
  z-index: 2;
  width: 100%;
  background-color: white;
  display: flex;
  align-items: center;
  justify-content: space-between;
  box-shadow: 0rem 0rem 4rem rgba(0 0 0 / 35%);
  padding: 0.5rem 1rem;
}

.figure {
  display: contents;
  margin-block-start: 0;
  margin-block-end: 0;
  margin-inline-start: 0;
  margin-inline-end: 0;
}

.profile {
  width: 2rem;
  height: 2rem;
  border-radius: 50%;
}

